--- a/css/login.css
+++ b/css/login.css
@@ -620,188 +620,86 @@ input[type=number]::-webkit-outer-spin-button {
       color: #00b3b7;
       margin: 0; }
 
-.video-modal-wrapper {
-  max-width: 850px; }
-  .video-modal-wrapper .modal-content {
-    border: none;
-    background: transparent; }
-    .video-modal-wrapper .modal-content .close-video-modal {
-      position: absolute;
-      top: -28px;
-      right: 0;
-      font-size: 20px;
-      line-height: 20px;
-      color: #fff; }
-
-.preview-slider {
-  overflow: hidden; }
-  .preview-slider .slide {
-    margin: 0 10px;
-    outline: none;
-    cursor: pointer;
-    position: relative; }
-    .preview-slider .slide:before {
-      content: '';
-      display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      background: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.3)); }
-    .preview-slider .slide .play-preview-button {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 10;
-      width: 40px; }
-      @media (max-width: 576px) {
-        .preview-slider .slide .play-preview-button {
-          width: 20px; } }
-    .preview-slider .slide .title-video-preview {
-      position: absolute;
-      top: 0;
-      left: 0;
-      padding: 5px 10px;
-      width: 100%;
-      font-size: 14px;
-      line-height: 16px;
-      font-weight: 900;
-      color: #fff;
-      text-transform: uppercase;
-      z-index: 10; }
-  .preview-slider .slick-list {
-    margin-left: -10px;
-    margin-right: -10px; }
-
-.invest-modal-dialog {
-  max-width: 600px; }
-  .invest-modal-dialog .modal-content {
-    padding: 20px;
-    border: none; }
-    .invest-modal-dialog .modal-content .modal-close {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      color: #7f7f7f;
-      font-size: 14px;
-      line-height: 14px; }
-    .invest-modal-dialog .modal-content .bottom-text {
-      font-size: 11px;
-      line-height: 16px;
-      color: #203140;
-      margin: 0;
-      text-align: justify; }
-    .invest-modal-dialog .modal-content span {
-      display: block;
-      font-size: 24px;
-      line-height: 26px;
-      color: #00b3b7;
-      text-transform: uppercase;
-      font-weight: 900;
-      margin-bottom: 20px;
-      padding-right: 25px; }
-    .invest-modal-dialog .modal-content em {
-      display: block;
-      font-style: normal;
-      font-size: 18px;
-      line-height: 23px;
-      font-weight: 300;
-      margin-bottom: 23px; }
-      .invest-modal-dialog .modal-content em.red-color {
-        color: #f33; }
-    .invest-modal-dialog .modal-content .invest-form-row {
-      margin-bottom: 20px; }
-      @media (max-width: 576px) {
-        .invest-modal-dialog .modal-content .invest-form-row {
-          display: block !important; } }
-      .invest-modal-dialog .modal-content .invest-form-row label {
-        display: block;
-        font-size: 24px;
-        line-height: 26px;
-        font-weight: 300;
-        color: #203140;
-        margin: 0;
-        flex: 1; }
-        @media (max-width: 576px) {
-          .invest-modal-dialog .modal-content .invest-form-row label {
-            margin-bottom: 10px; } }
-        .invest-modal-dialog .modal-content .invest-form-row label b {
-          font-size: 16px;
-          line-height: 18px; }
-      .invest-modal-dialog .modal-content .invest-form-row p {
-        font-size: 18px;
-        line-height: 24px;
-        color: #203140;
-        margin: 0;
-        flex: 1; }
-        @media (max-width: 576px) {
-          .invest-modal-dialog .modal-content .invest-form-row p {
-            margin-bottom: 10px; } }
-        .invest-modal-dialog .modal-content .invest-form-row p a {
-          color: #00b3b7;
-          text-decoration: underline; }
-          .invest-modal-dialog .modal-content .invest-form-row p a:hover {
-            text-decoration: none; }
-      .invest-modal-dialog .modal-content .invest-form-row .input-wrap input {
-        padding-left: 30px;
-        background-color: #ffffe1; }
-
-.input-wrap {
-  position: relative; }
-  .input-wrap i {
+.login-main {
+  background: #f5f5f5 url("../images/login-bg.png") no-repeat 50% 50%;
+  background-size: cover;
+  position: relative;
+  padding: 1px 15px; }
+  .login-main:before {
+    content: '';
+    display: block;
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 10px;
-    font-size: 24px;
-    line-height: 26px;
-    font-weight: 700;
-    font-style: normal;
-    color: #203140; }
-  .input-wrap input {
-    display: block;
-    width: 260px;
-    height: 50px;
-    border-radius: .3rem;
-    border: 1px solid #ccc;
-    text-align: right;
-    font-size: 24px;
-    line-height: 26px;
-    font-weight: 300;
-    color: #203140;
-    outline: none;
-    padding: 10px; }
-    @media (max-width: 576px) {
-      .input-wrap input {
-        width: 100%; } }
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 55px;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.001)); }
 
-.select-wrap {
+.login-wrapper {
+  max-width: 410px;
+  margin: 100px auto 100px auto;
+  border: 2px solid #00b3b7;
+  border-radius: 6px;
+  background-color: #f5f5f5;
+  padding: 45px;
   position: relative; }
-  .select-wrap select {
-    display: block;
-    width: 330px;
-    height: 30px;
-    border-radius: .3rem;
-    border: 1px solid #ccc;
-    background-color: #ffffe1;
-    outline: none;
+  @media (max-width: 576px) {
+    .login-wrapper {
+      padding: 25px; } }
+  .login-wrapper .login-title {
+    position: absolute;
+    top: -15px;
+    left: 35px;
+    font-size: 24px;
+    line-height: 26px;
+    font-weight: 900;
+    color: #00b3b7;
+    text-transform: uppercase;
+    background-color: #f5f5f5;
     padding: 0 10px; }
     @media (max-width: 576px) {
-      .select-wrap select {
-        width: 100%; } }
-    .select-wrap select option {
-      font-size: 16px;
-      line-height: 18px;
-      font-weight: 300; }
-
-.input-submit {
-  margin-left: 30px; }
+      .login-wrapper .login-title {
+        left: 15px; } }
+  .login-wrapper .login-form-row {
+    margin-bottom: 20px; }
+    .login-wrapper .login-form-row label {
+      display: block;
+      font-size: 18px;
+      line-height: 20px;
+      font-weight: 300;
+      color: #203140; }
+    .login-wrapper .login-form-row input {
+      display: block;
+      width: 100%;
+      height: 50px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      outline: none;
+      padding: 10px;
+      font-size: 18px;
+      line-height: 20px;
+      color: #203140; }
+      .login-wrapper .login-form-row input.border-main-color {
+        border: 1px solid #00b3b7; }
+      .login-wrapper .login-form-row input.border-error {
+        border: 1px solid #d45155; }
   @media (max-width: 576px) {
-    .input-submit {
-      margin-left: 0; } }
-  .input-submit input {
+    .login-wrapper .login-form-buttons {
+      display: block !important;
+      text-align: center; } }
+  .login-wrapper .login-form-buttons a {
+    display: block;
+    text-decoration: underline;
+    font-size: 18px;
+    line-height: 20px;
+    font-weight: 300;
+    color: #00b3b7; }
+    @media (max-width: 576px) {
+      .login-wrapper .login-form-buttons a {
+        margin-bottom: 20px; } }
+    .login-wrapper .login-form-buttons a:hover {
+      text-decoration: none; }
+  .login-wrapper .login-form-buttons input {
     display: block;
     min-width: 90px;
     height: 30px;
@@ -816,7 +714,59 @@ input[type=number]::-webkit-outer-spin-button {
     cursor: pointer;
     outline: none;
     transition: all .2s linear; }
-    .input-submit input:hover {
+    @media (max-width: 576px) {
+      .login-wrapper .login-form-buttons input {
+        margin: 0 auto; } }
+    .login-wrapper .login-form-buttons input:hover {
       background-color: #203140; }
 
-/*# sourceMappingURL=style.css.map */
+.signup-wrapper {
+  max-width: 730px;
+  margin: 100px auto 100px auto; }
+  .signup-wrapper .login-wrapper {
+    margin: 0;
+    width: 100%;
+    max-width: inherit; }
+  .signup-wrapper .checkbox {
+    margin-bottom: 40px; }
+  .signup-wrapper p {
+    font-size: 11px;
+    line-height: 18px;
+    color: #203140;
+    margin: 0;
+    text-align: justify;
+    padding: 40px 45px; }
+    @media (max-width: 576px) {
+      .signup-wrapper p {
+        padding: 20px 0; } }
+
+.hint-alerts {
+  position: fixed;
+  top: 110px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 360px;
+  padding: 15px;
+  text-align: center;
+  border-radius: 5px;
+  z-index: 100; }
+  @media (max-width: 992px) {
+    .hint-alerts {
+      top: 95px; } }
+  @media (max-width: 576px) {
+    .hint-alerts {
+      width: calc(100% - 30px); } }
+  @media (max-width: 768px) {
+    .hint-alerts {
+      top: 80px; } }
+  .hint-alerts.error {
+    background-color: #d45155; }
+  .hint-alerts mark {
+    display: block;
+    background: none;
+    padding: 0;
+    color: #fff;
+    font-size: 18px;
+    line-height: 24px; }
+
+/*# sourceMappingURL=login.css.map */
