--- a/css/mediapage.css
+++ b/css/mediapage.css
@@ -620,203 +620,78 @@ input[type=number]::-webkit-outer-spin-button {
       color: #00b3b7;
       margin: 0; }
 
-.video-modal-wrapper {
-  max-width: 850px; }
-  .video-modal-wrapper .modal-content {
-    border: none;
-    background: transparent; }
-    .video-modal-wrapper .modal-content .close-video-modal {
-      position: absolute;
-      top: -28px;
-      right: 0;
-      font-size: 20px;
-      line-height: 20px;
-      color: #fff; }
+.media-img {
+  width: 100%;
+  margin-top: -1px; }
 
-.preview-slider {
-  overflow: hidden; }
-  .preview-slider .slide {
-    margin: 0 10px;
-    outline: none;
-    cursor: pointer;
-    position: relative; }
-    .preview-slider .slide:before {
-      content: '';
-      display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      background: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.3)); }
-    .preview-slider .slide .play-preview-button {
+.latest-news-section {
+  margin-top: -50px;
+  padding-bottom: 50px; }
+  @media (max-width: 767px) {
+    .latest-news-section {
+      margin-top: 0; } }
+  .latest-news-section .news-list {
+    padding-top: 120px; }
+    @media (max-width: 767px) {
+      .latest-news-section .news-list {
+        padding-top: 0; } }
+    .latest-news-section .news-list .news-list-row {
+      border-bottom: 2px solid #d0dfe6;
+      margin-bottom: 40px;
+      padding-bottom: 40px; }
+      .latest-news-section .news-list .news-list-row:last-of-type {
+        padding-bottom: 0;
+        border: none; }
+      .latest-news-section .news-list .news-list-row span {
+        display: block;
+        font-size: 32px;
+        line-height: 35px;
+        font-weight: 900;
+        color: #203140;
+        text-transform: uppercase;
+        margin-bottom: 20px; }
+        @media (max-width: 767px) {
+          .latest-news-section .news-list .news-list-row span {
+            font-size: 26px;
+            line-height: 28px; } }
+      .latest-news-section .news-list .news-list-row p {
+        font-size: 16px;
+        line-height: 24px;
+        color: #203140;
+        text-align: justify; }
+  .latest-news-section .latest-news-title {
+    padding-top: 0; }
+
+@media (max-width: 767px) {
+  .pagination {
+    justify-content: center; } }
+.pagination a {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0 5px;
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 700;
+  color: #203140; }
+  .pagination a.active {
+    text-decoration: underline; }
+  .pagination a.prev, .pagination a.next {
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+    border: 1px solid #00b3b7;
+    position: relative;
+    transition: all .2s linear; }
+    .pagination a.prev:hover, .pagination a.next:hover {
+      background-color: #00b3b7; }
+      .pagination a.prev:hover i, .pagination a.next:hover i {
+        color: #fff; }
+    .pagination a.prev i, .pagination a.next i {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      z-index: 10;
-      width: 40px; }
-      @media (max-width: 576px) {
-        .preview-slider .slide .play-preview-button {
-          width: 20px; } }
-    .preview-slider .slide .title-video-preview {
-      position: absolute;
-      top: 0;
-      left: 0;
-      padding: 5px 10px;
-      width: 100%;
-      font-size: 14px;
-      line-height: 16px;
-      font-weight: 900;
-      color: #fff;
-      text-transform: uppercase;
-      z-index: 10; }
-  .preview-slider .slick-list {
-    margin-left: -10px;
-    margin-right: -10px; }
+      transition: all .2s linear;
+      color: #00b3b7; }
 
-.invest-modal-dialog {
-  max-width: 600px; }
-  .invest-modal-dialog .modal-content {
-    padding: 20px;
-    border: none; }
-    .invest-modal-dialog .modal-content .modal-close {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      color: #7f7f7f;
-      font-size: 14px;
-      line-height: 14px; }
-    .invest-modal-dialog .modal-content .bottom-text {
-      font-size: 11px;
-      line-height: 16px;
-      color: #203140;
-      margin: 0;
-      text-align: justify; }
-    .invest-modal-dialog .modal-content span {
-      display: block;
-      font-size: 24px;
-      line-height: 26px;
-      color: #00b3b7;
-      text-transform: uppercase;
-      font-weight: 900;
-      margin-bottom: 20px;
-      padding-right: 25px; }
-    .invest-modal-dialog .modal-content em {
-      display: block;
-      font-style: normal;
-      font-size: 18px;
-      line-height: 23px;
-      font-weight: 300;
-      margin-bottom: 23px; }
-      .invest-modal-dialog .modal-content em.red-color {
-        color: #f33; }
-    .invest-modal-dialog .modal-content .invest-form-row {
-      margin-bottom: 20px; }
-      @media (max-width: 576px) {
-        .invest-modal-dialog .modal-content .invest-form-row {
-          display: block !important; } }
-      .invest-modal-dialog .modal-content .invest-form-row label {
-        display: block;
-        font-size: 24px;
-        line-height: 26px;
-        font-weight: 300;
-        color: #203140;
-        margin: 0;
-        flex: 1; }
-        @media (max-width: 576px) {
-          .invest-modal-dialog .modal-content .invest-form-row label {
-            margin-bottom: 10px; } }
-        .invest-modal-dialog .modal-content .invest-form-row label b {
-          font-size: 16px;
-          line-height: 18px; }
-      .invest-modal-dialog .modal-content .invest-form-row p {
-        font-size: 18px;
-        line-height: 24px;
-        color: #203140;
-        margin: 0;
-        flex: 1; }
-        @media (max-width: 576px) {
-          .invest-modal-dialog .modal-content .invest-form-row p {
-            margin-bottom: 10px; } }
-        .invest-modal-dialog .modal-content .invest-form-row p a {
-          color: #00b3b7;
-          text-decoration: underline; }
-          .invest-modal-dialog .modal-content .invest-form-row p a:hover {
-            text-decoration: none; }
-      .invest-modal-dialog .modal-content .invest-form-row .input-wrap input {
-        padding-left: 30px;
-        background-color: #ffffe1; }
-
-.input-wrap {
-  position: relative; }
-  .input-wrap i {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 10px;
-    font-size: 24px;
-    line-height: 26px;
-    font-weight: 700;
-    font-style: normal;
-    color: #203140; }
-  .input-wrap input {
-    display: block;
-    width: 260px;
-    height: 50px;
-    border-radius: .3rem;
-    border: 1px solid #ccc;
-    text-align: right;
-    font-size: 24px;
-    line-height: 26px;
-    font-weight: 300;
-    color: #203140;
-    outline: none;
-    padding: 10px; }
-    @media (max-width: 576px) {
-      .input-wrap input {
-        width: 100%; } }
-
-.select-wrap {
-  position: relative; }
-  .select-wrap select {
-    display: block;
-    width: 330px;
-    height: 30px;
-    border-radius: .3rem;
-    border: 1px solid #ccc;
-    background-color: #ffffe1;
-    outline: none;
-    padding: 0 10px; }
-    @media (max-width: 576px) {
-      .select-wrap select {
-        width: 100%; } }
-    .select-wrap select option {
-      font-size: 16px;
-      line-height: 18px;
-      font-weight: 300; }
-
-.input-submit {
-  margin-left: 30px; }
-  @media (max-width: 576px) {
-    .input-submit {
-      margin-left: 0; } }
-  .input-submit input {
-    display: block;
-    min-width: 90px;
-    height: 30px;
-    border-radius: 30px;
-    background-color: #00b3b7;
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 13px;
-    line-height: 15px;
-    font-weight: 700;
-    border: none;
-    cursor: pointer;
-    outline: none;
-    transition: all .2s linear; }
-    .input-submit input:hover {
-      background-color: #203140; }
-
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=mediapage.css.map */
