--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -101,6 +101,7 @@ $dark-color: #203140;
 main {
   flex: 1;
   margin-top: 91px;
+  position: relative;
 
   @media (max-width: $screen-md-max) {
     margin-top: 77px;
@@ -115,19 +116,11 @@ main {
       content: '';
       display: block;
       position: absolute;
-      top: 91px;
+      top: 0;
       left: 0;
       width: 100%;
       height: 55px;
       background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.001));
-
-      @media (max-width: $screen-lg-min) {
-        top: 77px;
-      }
-
-      @media (max-width: $screen-md-min) {
-        top: 59px;
-      }
     }
   }
 }
@@ -171,7 +164,7 @@ main {
       border-color: $main-color;
     }
   }
-  
+
   &.green {
     border-color: $main-color;
     color: $main-color;
@@ -203,7 +196,7 @@ main {
   @media (max-width: 520px) {
     width: 100%;
   }
-  
+
   &.repeat-heading-dark {
     span {
       color: $dark-color;
@@ -333,6 +326,161 @@ input[type=number]::-webkit-outer-spin-button {
           text-decoration: none;
         }
       }
+    }
+  }
+}
+
+.error-page-wrapper {
+  @include center;
+  text-align: center;
+  width: 1110px;
+
+  @media (max-width: $screen-lg-max) {
+    width: 100%;
+  }
+
+  @media (max-width: $screen-md-min) {
+    padding: 50px 0;
+  }
+
+  @media (max-width: $screen-sm-min) {
+    @include reset-position;
+  }
+
+  @media (max-height: 480px) {
+    @include reset-position;
+    padding: 50px 0;
+  }
+
+  span {
+    display: block;
+    font-size: 80px;
+    line-height: 82px;
+    color: $dark-color;
+    margin-bottom: 30px;
+
+    @media (max-width: $screen-lg-min) {
+      font-size: 50px;
+      line-height: 52px;
+    }
+
+    @media (max-width: $screen-sm-min) {
+      font-size: 36px;
+      line-height: 38px;
+    }
+  }
+
+  p {
+    font-size: 16px;
+    line-height: 24px;
+    color: $dark-color;
+    margin: 0;
+
+    a {
+      color: $main-color;
+      text-decoration: underline;
+
+      &:hover {
+        text-decoration: none;
+      }
+    }
+  }
+
+  mark {
+    display: block;
+    padding: 0;
+    background: none;
+    font-size: 24px;
+    line-height: 26px;
+    font-weight: 700;
+    color: $dark-color;
+  }
+}
+
+.offer-title {
+  margin-bottom: 80px;
+
+  @media (max-width: $screen-sm-max) {
+    margin-bottom: 40px;
+  }
+
+  &.offer-title-top {
+    padding-top: 45px;
+
+    @media (max-width: $screen-sm-max) {
+      padding-top: 0;
+    }
+
+    span {
+      font-size: 40px;
+      line-height: 42px;
+
+      &:after {
+        left: 0;
+        transform: none;
+      }
+    }
+  }
+
+  &.offer-title-center {
+    display: inline-block;
+    min-width: 355px;
+    text-align: center;
+
+    @media (max-width: $screen-sm-max) {
+      display: block;
+      width: 100%;
+      min-width: inherit;
+    }
+  }
+
+  span {
+    display: inline-block;
+    font-size: 32px;
+    line-height: 34px;
+    font-weight: 900;
+    text-transform: uppercase;
+    position: relative;
+
+    @media (max-width: $screen-sm-max) {
+      br {
+        display: none;
+      }
+    }
+
+    &.main-color {
+      color: $main-color;
+
+      &:after {
+        background-color: $main-color;
+      }
+    }
+
+    &.dark-color {
+      color: $dark-color;
+
+      &:after {
+        background-color: $dark-color;
+      }
+    }
+
+    &.white-color {
+      color: #fff;
+
+      &:after {
+        background-color: #fff;
+      }
+    }
+
+    &:after {
+      content: '';
+      display: block;
+      width: 88px;
+      height: 5px;
+      position: absolute;
+      bottom: -15px;
+      left: 50%;
+      transform: translateX(-50%);
     }
   }
 }
