--- a/scss/login.scss
+++ b/scss/login.scss
@@ -1,3 +1,7 @@
+@import "variables";
+@import "header";
+@import "footer";
+
 .login-main {
   background: #f5f5f5 url("../images/login-bg.png") no-repeat 50% 50%;
   background-size: cover;
@@ -24,7 +28,7 @@
   background-color: #f5f5f5;
   padding: 45px;
   position: relative;
-  
+
   @media (max-width: $screen-sm-min) {
     padding: 25px;
   }
@@ -180,7 +184,7 @@
   @media (max-width: $screen-md-min) {
     top: 80px;
   }
-  
+
   &.error {
     background-color: #d45155;
   }
